source/_assets/sass/_themes.scss
// Mixin for the partial background
@mixin theme-background( $color ) {

	background: $color;

	.wrapper {
		background: $color;
	}

	@media #{$mq-small} {
		background: linear-gradient(90deg, white 50%, $color 50%);
	}

}

// Common styles shared by all the themes
section.theme {

	.container {
		position: relative;
		display: flex;
	}

	h2 {
		@include font-accent();
		letter-spacing: em(3.54);
		line-height: 2.1;

		text-transform: uppercase;
		color: #CC9A2C;

		// Hidden on mobile
		display: none;
	}

	.image {

		img {
			max-height: 80vh;
		}

	}

	.content {

		// Weird, but needed for flexbox
		width: 100%;

		h1 {
			@include font-heading();
			letter-spacing: em(0.6);
			line-height: 1.48;
		}

		p {
			@include font-copy();
			letter-spacing: em(0.04);
		}

	}

	// Spacing stuff... rethink this?
	// Needs margin-top on "unfold" from column
	h1, .image, .content {
		margin-bottom: 30px;
	}


	@media #{$mq-small} {

		.wrapper {
			align-self: stretch;
			margin-left: 10%; // between() me!
			padding-left: 10%;
		}

		h2 {
			display: block;

			position: absolute;
			bottom: 2em;
			left: 5%;

			transform: translateX(-50%);

			// Force it to wrap
			max-width: 10%;
		}
	}


	@media #{$mq-xlarge} {
		h2 {
			left: 10%;
		}
	}

}


section.theme-1-portrait {

	@include theme-background(#DAEFE3);

	.wrapper {
		display: flex;
		align-items: center;
		flex-direction: column;
		justify-content: space-between;
	}

	.image, img {
		width: 100%;
	}

	@media #{$mq-smaller} {

		// TODO: Rethink spacing
		h1, .image, .content {
			margin-top: 30px;
		}

		.wrapper {
			flex-direction: row;
		}

	}

}


section.theme-1-landscape {

	@include theme-background(#E5F0DA);

	.wrapper {
		display: flex;
		align-items: center;
		flex-direction: column;
		justify-content: space-between;
	}

	img {
		width: 100%;
	}

	@media #{$mq-small} {
		.wrapper {
			flex-wrap: nowrap;
		}

		.content {
			align-self: flex-end;
			max-width: 65%;
		}
	}

	@media #{$mq-smallish} {
		.content {
			max-width: 50%;
		}
	}

}

section.theme-2 {
	@include theme-background(#F9F5D3);
}

section.theme-3 {
	@include theme-background(#EEE0F1);
}

section.theme-4 {
	@include theme-background(#DFF5F3);
}

